src/test/ui/feature-gate-underscore-lifetimes.stderr
error[E0658]: underscore lifetimes are unstable (see issue #44524)
  --> $DIR/feature-gate-underscore-lifetimes.rs:13:23
   |
LL | fn foo(x: &u8) -> Foo<'_> { //~ ERROR underscore lifetimes are unstable
   |                       ^^
   |
   = help: add #![feature(underscore_lifetimes)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
